Link wrap fixed on shipping address page

--- a/assets/scss/pages/_profile-account-information.scss
+++ b/assets/scss/pages/_profile-account-information.scss
@@ -41,7 +41,7 @@
 
       a {
         display: block;
-        white-space: nowrap;
+        text-align: right;
         margin-bottom: 15px;
         font-size: 14px;
 
